--- a/soft/src/main/resources/templates/signup_form.html
+++ b/soft/src/main/resources/templates/signup_form.html
@@ -45,6 +45,37 @@
 							required minlength="2" maxlength="20" />
 				</div>
 			</div>
+
+			<div class="form-group row">
+				<label class="col-4 col-form-label">Industry: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{industry}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-4 col-form-label">About Me: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{about}" class="form-control" 
+							required minlength="2" maxlength="500" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-4 col-form-label">Skills: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{skills}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+
+			<div class="form-group row">
+				<label class="col-4 col-form-label">User Type: Are you a "student" or an "employer"? </label>
+				<div class="col-8">
+					<input type="text" th:field="*{userType}" class="form-control" />
+				</div>
+			</div>
 			
 			<div>
 				<button type="submit" class="btn btn-primary">Sign Up</button> 
