--- a/soft/src/main/resources/templates/users.html
+++ b/soft/src/main/resources/templates/users.html
@@ -29,6 +29,10 @@
 					<th>E-mail</th>
 					<th>First Name</th>
 					<th>Last Name</th>
+					<th>Industry</th>
+					<th>About</th>
+					<th>Skills</th>
+					<th>User Type</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -37,6 +41,11 @@
 					<td th:text="${user.email}">E-mail</td>
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
+					<td th:text="${user.industry}">Industry</td>
+					<td th:text="${user.about}">About</td>
+					<td th:text="${user.skills}">Skills</td>
+					<td th:text="${user.userType}">User Type</td>
+
 				</tr>
 			</tbody>
 		</table>
