--- a/soft/src/main/resources/templates/index.html
+++ b/soft/src/main/resources/templates/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 	<div class="container text-center">
-		<h1>Welcome to CodeJava.net</h1>
+		<h1>Template Index Page</h1>
 		<h3><a th:href="@{/users}">List of Users</a></h3>
 		<h3><a th:href="@{/register}">Register</a></h3>
 		<h3><a th:href="@{/login}">Login</a></h3>
+		<h3><a th:href="@{/students}">Students</a></h3>
 	</div>
 	
 </body>
