--- a/soft/src/main/resources/templates/signup_form.html
+++ b/soft/src/main/resources/templates/signup_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="ISO-8859-1">
-	<title>Sign Up - CodeJava</title>
+	<title>Sign Up</title>
 	<link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 	<script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -71,9 +71,10 @@
 			</div>
 
 			<div class="form-group row">
-				<label class="col-4 col-form-label">User Type: Are you a "student" or an "employer"? </label>
+				<label class="col-4 col-form-label">User Type: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{userType}" class="form-control" />
+					<input type="text" th:field="*{type}" class="form-control"
+							required minlength="2" maxlength="20" />
 				</div>
 			</div>
 			
