--- a/soft/src/main/resources/templates/employers.html
+++ b/soft/src/main/resources/templates/employers.html
@@ -35,12 +35,17 @@
                 </ul>
                 <form th:action="@{/logout}" method="post" th:hidden="true" name="logout">
                 <input type="submit" value="Logout" />
-	        	</form>
+		        </form>
             </div>
         </div>
     </nav>
     <!-- Change from here -->
     <div class="container text-center">
+	<div>
+        <form th:action="@{/logout}" method="post" th:hidden="true" name="logout">
+                <input type="submit" value="Logout" />
+		</form>
+	</div>
 	<div>
 		<table class="table table-striped table-bordered">
 			<thead class="thead-light">
@@ -48,8 +53,8 @@
 					<th>User ID</th>
 					<th>E-mail</th>
 					<th>First Name</th>
-                    <th>Last Name</th>
-					<th>Industry</th>
+					<th>Last Name</th>
+                    <th>Industry</th>
                     <th>Skills</th>
 				</tr>
 			</thead>
