--- a/soft/src/main/resources/templates/settings.html
+++ b/soft/src/main/resources/templates/settings.html
@@ -39,34 +39,8 @@
             </div>
         </div>
     </nav>
-    <!-- Change from here -->
-    <div class="container text-center">
-	<div>
-		<table class="table table-striped table-bordered">
-			<thead class="thead-light">
-				<tr>
-					<th>User ID</th>
-					<th>E-mail</th>
-					<th>First Name</th>
-                    <th>Last Name</th>
-					<th>Industry</th>
-                    <th>Skills</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="user: ${listUsers}">
-					<td th:text="${user.id}">User ID</td>
-					<td th:text="${user.email}">E-mail</td>
-					<td th:text="${user.firstName}">First Name</td>
-					<td th:text="${user.lastName}">Last Name</td>
-                    <td th:text="${user.industry}">Last Name</td>
-                    <td th:text="${user.skills}">Last Name</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
-    <!-- to here. Testing only -->
+    <h1>PLACEHOLDER</h1>
+    <!-- components go here in divs etc -->
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/static/js/Profile-Edit-Form.js}"></script>
