--- a/soft/src/main/resources/templates/briefs.html
+++ b/soft/src/main/resources/templates/briefs.html
@@ -39,8 +39,34 @@
             </div>
         </div>
     </nav>
-    <h1>PLACEHOLDER</h1>
-    <!-- components go here in divs etc -->
+    <h1><a class="forgot" th:href="@{/createbrief}">Create brief</a></h1>
+   <!-- Change from here -->
+    <div class="container text-center">
+	<div>
+		<table class="table table-striped table-bordered">
+			<thead class="thead-light">
+				<tr>
+					<th>Brief ID</th>
+					<th>Skills Required</th>
+					<th>Job Description</th>
+                    <th>Pay</th>
+					<th>Industry</th>
+                    <th>Creation Date</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="brief: ${listBriefs}">
+					<td th:text="${brief.id}">brief ID</td>
+					<td th:text="${brief.skillsRequired}">Skills Required</td>
+					<td th:text="${brief.jobDescription}">Job Description</td>
+					<td th:text="${brief.pay}">Pay</td>
+                    <td th:text="${brief.industry}">Industry</td>
+                    <td th:text="${brief.creationDate}">Creation Date</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/static/js/Profile-Edit-Form.js}"></script>
