--- a/soft/src/main/resources/templates/login.html
+++ b/soft/src/main/resources/templates/login.html
@@ -34,6 +34,7 @@
                         <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" required /></div>
                         <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" required /></div>
                         <div class="form-group"><button class="btn btn-primary btn-block" type="submit" value="Login" style="background: #2699FB;" />Log In</button>
+                        <a class="forgot" th:href="@{/forgot}">Forgot your email or password?</a><a class="forgot" th:href="@{/register}">Create account</a>
                     </form>
                 </section>
             </div>
