--- a/soft/src/main/resources/templates/registerform.html
+++ b/soft/src/main/resources/templates/registerform.html
@@ -39,8 +39,79 @@
             </div>
         </div>
     </nav>
-    <h1>PLACEHOLDER</h1>
-    <!-- components go here in divs etc -->
+    <!-- Replace this code with custom code when it's working -->
+    <div class="container text-center">
+		<div>
+			<h1>User Registration - Sign Up</h1>
+		</div>
+		<form th:action="@{/process_register}" th:object="${user}" 
+			method="post" style="max-width: 600px; margin: 0 auto;">
+		<div class="m-3">
+			<div class="form-group row">
+				<label class="col-4 col-form-label">E-mail: </label>
+				<div class="col-8">
+					<input type="email" th:field="*{email}" class="form-control" required />
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-4 col-form-label">Password: </label>
+				<div class="col-8">
+					<input type="password" th:field="*{password}" class="form-control" 
+							required minlength="6" maxlength="10"/>
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-4 col-form-label">First Name: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{firstName}" class="form-control" 
+							required minlength="2" maxlength="20"/>
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-4 col-form-label">Last Name: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{lastName}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+            <div class="form-group row">
+				<label class="col-4 col-form-label">Industry: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{industry}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+            <div class="form-group row">
+				<label class="col-4 col-form-label">About: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{about}" class="form-control" 
+							required minlength="2" maxlength="500" />
+				</div>
+			</div>
+            <div class="form-group row">
+				<label class="col-4 col-form-label">skills: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{skills}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+            <div class="form-group row">
+				<label class="col-4 col-form-label">User Type: </label>
+				<div class="col-8">
+					<input type="text" th:field="*{type}" class="form-control" 
+							required minlength="2" maxlength="20" />
+				</div>
+			</div>
+			<div>
+				<button type="submit" class="btn btn-primary">Sign Up</button> 
+			</div>
+		</div>
+		</form>
+	</div>
+    <!-- to here -->
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/static/js/Profile-Edit-Form.js}"></script>
