Added dependency and started enum autocomplete

--- a/soft/src/main/resources/templates/createbriefform.html
+++ b/soft/src/main/resources/templates/createbriefform.html
@@ -91,6 +91,9 @@
 					<input type="date" th:field="*{endDate}" class="form-control"/>
 				</div>
 			</div> -->
+			<div>
+				<button type="submit" class="btn btn-primary">Sign Up</button> 
+			</div>
 		</div>
 		</form>
 	</div>
