--- a/soft/src/main/resources/templates/registerform.html
+++ b/soft/src/main/resources/templates/registerform.html
@@ -87,7 +87,7 @@
             <div class="form-group row">
 				<label class="col-4 col-form-label">About: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{about}" class="form-control" 
+					<textarea type="text" th:field="*{about}" class="form-control" 
 							required minlength="2" maxlength="500" />
 				</div>
 			</div>
@@ -98,11 +98,17 @@
 							required minlength="2" maxlength="20" />
 				</div>
 			</div>
-            <div class="form-group row">
+			 <div class="form-group row">
 				<label class="col-4 col-form-label">User Type: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{type}" class="form-control" 
-							required minlength="2" maxlength="20" />
+				<div class="form-check form-check-inline">
+        			<input class="form-check-input" type="radio" th:field="*{type}" id="option1" value="student">
+        			<label class="form-check-label" for="option1">Student</label>
+    			</div>
+				<div class="form-check form-check-inline">
+        			<input class="form-check-input" type="radio" th:field="*{type}" id="option2" value="employer">
+        			<label class="form-check-label" for="option1">Employer</label>
+    			</div>
 				</div>
 			</div>
 			<div>
