--- a/soft/src/main/resources/templates/createbriefform.html
+++ b/soft/src/main/resources/templates/createbriefform.html
@@ -96,6 +96,14 @@
 			</div>
 		</div>
 		</form>
+<div>
+    <footer class="footer-basic" style="background: #2699FB;">
+        <ul class="list-inline" style="color: #FFFFFF;">
+            <li class="list-inline-item"><a th:href="@{/about}">About</a></li>
+            <li class="copyright" style="color: #FFFFFF;">Oxford Brookes © 2021 </li>
+        </ul>
+    </footer>
+</div>
 	</div>
     <!-- to here -->
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
