--- a/soft/src/main/resources/templates/about.html
+++ b/soft/src/main/resources/templates/about.html
@@ -40,6 +40,14 @@
         </div>
     </nav>
     <h1>PLACEHOLDER</h1>
+    <div>
+    <footer class="footer-basic" style="background: #2699FB;">
+        <ul class="list-inline" style="color: #FFFFFF;">
+            <li class="list-inline-item"><a th:href="@{/about}">About</a></li>
+            <li class="copyright" style="color: #FFFFFF;">Oxford Brookes © 2021 </li>
+        </ul>
+    </footer>
+</div>
     <!-- components go here in divs etc -->
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
