--- a/soft/src/main/resources/templates/users.html
+++ b/soft/src/main/resources/templates/users.html
@@ -51,6 +51,8 @@
 					<th>Last Name</th>
                     <th>Industry</th>
                     <th>Skills</th>
+                    <th>User Type</th>
+
 				</tr>
 			</thead>
 			<tbody>
@@ -59,14 +61,23 @@
 					<td th:text="${user.email}">E-mail</td>
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
-                    <td th:text="${user.industry}">Last Name</td>
-                    <td th:text="${user.skills}">Last Name</td>
+                    <td th:text="${user.industry}">Industry</td>
+                    <td th:text="${user.skills}">Skills</td>
+                    <td th:text="${user.type}">User Type</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 </div>
     <!-- to here. Testing only -->
+<div>
+    <footer class="footer-basic" style="background: #2699FB;">
+        <ul class="list-inline" style="color: #FFFFFF;">
+            <li class="list-inline-item"><a th:href="@{/about}">About</a></li>
+            <li class="copyright" style="color: #FFFFFF;">Oxford Brookes © 2021 </li>
+        </ul>
+    </footer>
+</div>
     <script th:src="@{/static/jquery/jquery.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/static/js/Profile-Edit-Form.js}"></script>
