brief form aligned with register form

--- a/soft/src/main/resources/templates/briefs.html
+++ b/soft/src/main/resources/templates/briefs.html
@@ -123,7 +123,7 @@
                 <tbody>
                   <tr th:each="brief: ${listBriefs}">
                     <td th:text="${brief.id}">brief ID</td>
-                    <td th:text="${brief.skillsRequired}">Skills Required</td>
+                    <td th:text="${brief.skill}">Skills Required</td>
                     <td th:text="${brief.jobDescription}">Job Description</td>
                     <td th:text="${brief.pay}">Pay</td>
                     <td th:text="${brief.industry}">Industry</td>
