--- a/soft/src/main/resources/templates/students.html
+++ b/soft/src/main/resources/templates/students.html
@@ -70,7 +70,7 @@
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
                     <td th:text="${user.industry}">Industry</td>
-                    <td th:text="${user.skills}">Skills</td>
+                    <td th:text="${user.skill}">Skills</td>
 				</tr>
 			</tbody>
 		</table>
