--- a/soft/src/main/resources/templates/registerform.html
+++ b/soft/src/main/resources/templates/registerform.html
@@ -46,7 +46,7 @@
 		</div>
 		<form th:action="@{/process_register}" th:object="${user}" 
 			method="post" style="max-width: 600px; margin: 0 auto;">
-		<div class="m-3">
+		<d	iv class="m-3">
 			<div class="form-group row">
 				<label class="col-4 col-form-label">E-mail: </label>
 				<div class="col-8">
@@ -86,13 +86,6 @@
 							required minlength="2" maxlength="500" />
 				</div>
 			</div>
-            <div class="form-group row">
-				<label class="col-4 col-form-label">skills: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{skills}" class="form-control" 
-							required minlength="2" maxlength="20" />
-				</div>
-			</div>
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Industry: </label>
 					<div class="col-8">
@@ -105,7 +98,18 @@
 					</select>
 					</div>
 				</div>
-			</div>
+				<div class="form-group row">
+				<label class="col-4 col-form-label">Skills: </label>
+					<div class="col-8">
+						<select class="form-control selectpicker" th:field="*{skill}" id="skill" multiple>
+						<option value="">No Selection</option>
+						<option th:each="skill : ${T(com.adv.soft.models.Skill).values()}"
+                                th:value="${skill}"
+                                th:text="${skill}">skill
+                        </option>
+					</select>
+					</div>
+				</div>
 			 <div class="form-group row">
 				<label class="col-4 col-form-label">User Type: </label>
 				<div class="col-8">
