--- a/soft/src/main/resources/templates/users.html
+++ b/soft/src/main/resources/templates/users.html
@@ -62,7 +62,7 @@
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
                     <td th:text="${user.industry}">Industry</td>
-                    <td th:text="${user.skills}">Skills</td>
+                    <td th:text="${user.skill}">Skills</td>
                     <td th:text="${user.type}">User Type</td>
 				</tr>
 			</tbody>
