--- a/soft/src/main/resources/templates/profile.html
+++ b/soft/src/main/resources/templates/profile.html
@@ -39,8 +39,36 @@
             </div>
         </div>
     </nav>
-    <h1>PLACEHOLDER</h1>
     <!-- components go here in divs etc -->
+    <div class="container text-center">
+	<div>
+		<table class="table table-striped table-bordered">
+			<thead class="thead-light">
+				<tr>
+					<th>User ID</th>
+					<th>E-mail</th>
+					<th>First Name</th>
+					<th>Last Name</th>
+                    <th>Industry</th>
+                    <th>Skills</th>
+                    <th>User Type</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="user: ${listUsers}">
+					<td th:text="${user.id}">User ID</td>
+					<td th:text="${user.email}">E-mail</td>
+					<td th:text="${user.firstName}">First Name</td>
+					<td th:text="${user.lastName}">Last Name</td>
+                    <td th:text="${user.industry}">Industry</td>
+                    <td th:text="${user.skill}">Skills</td>
+                    <td th:text="${user.type}">User Type</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+    <!-- This is the footer, no content here -->
     <div>
     <footer class="footer-basic" style="background: #2699FB;">
         <ul class="list-inline" style="color: #FFFFFF;">
