--- a/soft/src/main/resources/templates/users.html
+++ b/soft/src/main/resources/templates/users.html
@@ -45,19 +45,18 @@
 		<table class="table table-striped table-bordered">
 			<thead class="thead-light">
 				<tr>
-					<th>User ID</th>
+					<th>User </th>
 					<th>E-mail</th>
 					<th>First Name</th>
 					<th>Last Name</th>
                     <th>Industry</th>
                     <th>Skills</th>
                     <th>User Type</th>
-
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="user: ${listUsers}">
-					<td th:text="${user.id}">User ID</td>
+					<td><a th:href="@{/profile(id=${user.id})}">User [[${user.id}]]</a></td>
 					<td th:text="${user.email}">E-mail</td>
 					<td th:text="${user.firstName}">First Name</td>
 					<td th:text="${user.lastName}">Last Name</td>
